# Hi3861

applications/sample/wifi-iot/app/: BUILD.gn
applications/sample/wifi-iot/app/Agriculture/: BUILD.gn  main.c  mqtt_demo.c  mqtt_utils.c  mqtt_utils.h  oled_ssd1306.c  sht40.c  sht40.h  wifi_utils.c
applications/sample/wifi-iot/app/chapter_04/: BUILD.gn  mq2_demo.c
applications/sample/wifi-iot/app/chapter_05/: BUILD.gn  aht20.c  aht20.h  aht20_demo.c
applications/sample/wifi-iot/app/chapter_06/: BUILD.gn  oled_demo.c  oled_ssd1306.c  oled_ssd1306.h
applications/sample/wifi-iot/app/chapter_07/: BUILD.gn  aht20.c  aht20.h  environment_demo.c
applications/sample/wifi-iot/app/chapter_09/: BUILD.gn  wifi_sta_demo.c
applications/sample/wifi-iot/app/chapter_10/: BUILD.gn  wifi_ap_demo.c
applications/sample/wifi-iot/app/chapter_15/: BUILD.gn  main.c  mqtt_utils.h  wifi_utils.h
applications/sample/wifi-iot/app/iothardware/: BUILD.gn  led_example.c
applications/sample/wifi-iot/app/mqtt_demo/: BUILD.gn  mqtt_demo.c  mqtt_utils.c  mqtt_utils.h  test.c  wifi_utils.h
applications/sample/wifi-iot/app/sht40/: BUILD.gn  sht40_demo.c
applications/sample/wifi-iot/app/tcp_client/: BUILD.gn  tcp_client.h  tcp_client_demo.c  wifi_utils.h
applications/sample/wifi-iot/app/tcp_server/: BUILD.gn  tcp_server.h  tcp_server_demo.c
