# Copyright (c) 2020 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//build/lite/config/component/lite_component.gni")

lite_component("app") {
    features = [
        #"iothardware:led_example",
        #"chapter_04:chapter_04",
        #"chapter_05:chapter_05",
        #"chapter_06:chapter_06",
        #"chapter_07:chapter_07",
        #"sht40:sht40",
        #"chapter_09:wifi_demo",
        #"chapter_10:chapter_10",
        #"tcp_server:tcp_server",
        #"tcp_client:tcp_client",
        #"chapter_15:chapter_15",
        #"mqtt_demo:mqtt_demo",
        "Agriculture:Agriculture",
    ]
}
