static_library("sht40") {
    sources = [
        "sht40.c",
        "sht40_demo.c",
        "oled_ssd1306.c",
    ]

    include_dirs = [
        "//utils/native/lite/include",
        "//kernel/liteos_m/components/cmsis/2.0",
        "//base/iot_hardware/peripheral/interfaces/kits",
         "//base/iot_hardware/interfaces/kits/wifiiot_lite",
    ]
}